clusters/home/media/app/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: radarr
  name: radarr
spec:
  selector:
    app: radarr
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 7878
