clusters/home/media/app/radarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
spec:
  parentRefs:
    - name: gw-media
  hostnames:
    - radarr.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: radarr
          port: 80
